NEON-1696 Fix Ops Clock not fitting into visualization in Firefox

--- a/app/css/directives/circularHeatChart.less
+++ b/app/css/directives/circularHeatChart.less
@@ -20,7 +20,6 @@
     svg {
         width: 100%;
         height: 100%;
-        display: block;
         margin: auto;
 
         .segment, .radial {
